[package]
name = "apa102-dbus"
version = "0.1.0"
edition = "2021"
description = "DBUS interface for controlling an APA102 LED strip"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zbus = { version = "3", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
rppal = "0.14.1"
bitvec = "1"
serde = "1"
clap = { version = "4.2.2", features = ["derive"] }
